moved reg ex link filter function back into casper script

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,11 +15,14 @@
   <script src="src/server/scraping/scrapeLocationTask.js"></script>
   <script src="src/server/scraping/scrapeLocationTaskrunner.js"></script>
   <script src="src/server/scraping/getLocationLinks.js"></script>
+  <script src="src/server/scraping/casperUtilities.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/scrapeLocationTaskSpec.js"></script>
   <script src="spec/scrapeLocationLinksTaskRunnerSpec.js"></script>
   <script src="spec/getLocationLinksSpec.js"></script>
+  <script src="spec/casperUtilitiesSpec.js"></script>
+
 
 </head>
 
