--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,14 +12,14 @@
   <script src="lib/jasmine-2.4.1/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/server/scraping/scrapeLocationTask.js"></script>
+  <script src="src/server/scraping/scrapeTasks.js"></script>
   <script src="src/server/scraping/scrapeLocationTaskrunner.js"></script>
   <script src="src/server/scraping/getLocationLinks.js"></script>
   <script src="src/server/scraping/casperUtilities.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/scrapeLocationTaskSpec.js"></script>
-  <script src="spec/scrapeLocationLinksTaskRunnerSpec.js"></script>
+  <script src="spec/scrapeTasksSpec.js"></script>
+  <script src="spec/scrapeTaskRunnerSpec.js"></script>
   <script src="spec/getLocationLinksSpec.js"></script>
   <script src="spec/casperUtilitiesSpec.js"></script>
 
