added testing files for bodyget.js

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,11 +15,13 @@
   <script src="src/server/scraping/scrapeTasks.js"></script>
   <script src="src/server/scraping/scrapeLocationTaskrunner.js"></script>
   <script src="src/server/scraping/getLocationLinks.js"></script>
+  <script src="src/server/scraping/bodyget.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/scrapeTasksSpec.js"></script>
   <script src="spec/scrapeTaskRunnerSpec.js"></script>
   <script src="spec/getLocationLinksSpec.js"></script>
+  <script src="src/server/scraping/bodygetSpect.js"></script>
 
 
 </head>
